--- a/04-pipesApp/angular.json
+++ b/04-pipesApp/angular.json
@@ -31,8 +31,9 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.css",
-              "node_modules/primeng/resources/themes/lara-dark-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeflex/primeflex.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeng/resources/themes/lara-dark-blue/theme.css"
             ],
             "scripts": []
           },
